src/objects/EP_Log_Interface__c.object
<CustomObject>
    <description>EP Log: Used for reporting of integration interface data transactions.  
Track number of records:
Total, valid records, invalid records, confirmed duplicates, suspected duplicates, successful records, failed records</description>
    <fields>
        <fullName>Confirmed__c</fullName>
        <description>Number of confirmed duplicates</description>
        <label>Confirmed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <description>Data source detail</description>
        <label>Dealer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EpRunId__c</fullName>
        <description>Parent BTL ID</description>
        <label>EpRunId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <description>Number of failed records</description>
        <label>Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <description>Data source or interface name</description>
        <label>Interface</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid__c</fullName>
        <description>Number of invalid records</description>
        <label>Invalid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>Business Object, e.g. Contact, Lead</description>
        <label>ObjectName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RunDate__c</fullName>
        <description>Timestamp of interface run</description>
        <label>RunDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Successful__c</fullName>
        <description>Number of successful records</description>
        <label>Successful</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suspected__c</fullName>
        <description>Number of suspected duplicates</description>
        <label>Suspected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Total number of records</description>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Validation or Deduplication</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deduplication</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <description>Number of valid records</description>
        <label>Valid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EP Log Interface</label>
    <nameField>
        <displayFormat>EPLIF={0000000}</displayFormat>
        <label>EP Log Interface ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EP Log Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>